# hell

helicone-python/helicone/openai_proxy/: openai_injector.py
rapida-node/: LICENSE  README.md  index.ts  package-lock.json  package.json
rapida-node/async_logger/: RapidaAsyncLogger.ts  RapidaAsyncOpenAI.ts  RapidaLogger.ts
rapida-node/core/: RapidaClientOptions.ts  RapidaFeedback.ts  RapidaHeaderBuilder.ts  RapidaOpenAIApi.ts
rapida-node/proxy_logger/: RapidaProxyOpenAI.ts
rapida-node/tests/: UsageExample.ts  async.test.ts  proxy.test.ts  testConsts.ts
rapida-python/: README.md  pyproject.toml
rapida-python/rapida/: test.py
rapida-python/rapida/async_logger/: async_logger.py
rapida-python/rapida/globals/: __init__.py  rapida.py
rapida-python/rapida/lock/: __init__.py
rapida-python/rapida/openai_async/: __init__.py  openai_injector.py
rapida-python/rapida/openai_proxy/: __init__.py  openai_injector.py
rapida-python/rapida/requester/: __init__.py
rapida-python/rapida/runs/: __init__.py
rapida-python/tests/: test_async.py  test_runs_async.py  test_runs_proxy.py
