[tool.poetry]
name = "rapida"
version = "1.0.14"
description = "A Python wrapper for the OpenAI API that logs all requests to Rapida."
license = "Apache-2.0"
authors = ["Rapida, Inc. <help@rapida.ai>"]
homepage = "https://www.rapida.ai"
repository = "https://github.com/rapida/rapida/rapida-python"

[tool.poetry.dependencies]
python = ">=3.8.1"
openai = "^0.27.0"
lockfile = "^0.12.2"
pyhumps = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
